@@ -17,7 +17,7 @@
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-#include <m2skernel.h>
+#include <cpukernel.h>
 
 struct fdt_t *fdt_create()
 {
